--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
 body {
   margin: 0;
+  font-size: 35px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/** basic css for all components **/
+a {
+  color: white;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+ul {
+  list-style-type:none;
+}
+.footer {
+  background-color: rgb(36, 36, 36);
+  color: grey;
+  z-index: 1;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  position: fixed;
+}
+.footer > ul {
+  display: flex;
+  flex-direction: row;
+}
+.footer > ul > li {
+  width: 45%;
+  align-items: center;
+}
+
