--- a/src/css/MusicLibrary.css
+++ b/src/css/MusicLibrary.css
@@ -45,6 +45,13 @@
     text-transform: capitalize;
     text-align: center;
 }
+/** nav active and inactive code... **/
+.active {
+    border-bottom: 2px solid greenyellow;
+}
+.inactive {
+    color: rgba(255, 255, 255, 0.616);
+}
 .search-section{
     padding: 20px;
 }
@@ -93,19 +100,31 @@ textarea:focus, input:focus{
     background-color: black;
     margin: 20px;
     padding: 20px;
+    border: 2px solid rgba(255, 255, 255, 0);
+    border-bottom-color: rgba(185, 185, 185, 0.644);
+}
+.container-x {
+    border: 2px solid rgba(255, 255, 255, 0);
 }
 .img-box { 
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     margin-left: -20px;
     background-color: rgba(255, 255, 255, 0.425);
 }
+.img-box-x { 
+    width: 120px;
+    height: 120px;
+    margin-top: 20px;
+    background-color: rgb(255, 255, 255);
+}
 .img-box-circle { 
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
     margin-left: -20px;
     background-color: rgba(255, 255, 255, 0.527);
+    
 }
 .text-box {
     display: flex;
@@ -113,18 +132,88 @@ textarea:focus, input:focus{
     padding: 20px;
     width: 60%;
 }
+.text-box-x {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    width: 80%;
+}
 .text-box > .main-topic {
     font-size: 38px;
     font-weight: 700;
+
 }
 .text-box > .sub-topic {
     font-size: 32px;
     color: rgba(255, 255, 255, 0.651);
     margin-top: 10px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 .text-box > .time {
     text-align: right;
     margin-right: -100px;
     margin-top: -90px;
     color: rgba(187, 187, 187, 0.623);
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
+/** Podcast css here **/
+.card {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    padding: 20px;
+    background-color: rgb(54, 54, 54);
+    border-radius: 2px;
+}
+.txt1 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.txt1 {
+    font-size: 38px;
+    font-weight: 700;
+}
+.txt2 {
+    font-size: 32px;
+    color: rgba(255, 255, 255, 0.781);
+    margin-top: 10px;
+}
+.txt3 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.podcast {
+    margin-top: 20px;
+}
+.button {
+    width: 50%;
+}
+.button > div {
+    width: 150px;
+    padding: 20px;
+    border: 2px solid rgb(245, 245, 245);
+    margin: 20px;
+    margin-left: 0px;
+    text-align: center;
+    text-transform: uppercase;
+}
+.time-x {
+    width: 50%;
+    float: right;
+    text-align: end;
+    padding: 20px;
+    margin: 20px;
+    text-transform: uppercase;
+    color: rgb(190, 190, 190);
 }
