--- a/src/css/MusicPlayer.css
+++ b/src/css/MusicPlayer.css
@@ -1,12 +1,15 @@
+
 .mp-app {
-    margin-top: 25px;
+    margin-top: -142px;
+    margin-left: -20px;
     color: rgb(255, 6, 101);
-    background-image: linear-gradient(180deg, rgba(252, 0, 118, 0.562),rgba(0, 0, 0, 0.199),black);
-    margin-left: -18px;
-    margin-right: -18px;
+    background-image: linear-gradient(180deg, rgb(187, 0, 87),rgba(0, 0, 0, 0.945),black);
     padding: 30px;
-    min-height: 82vh;
+    padding-bottom: 0px;
     font-size: larger;
+    width: 85vw;
+    position: fixed;
+    z-index: 5;
 }
 section {
     padding: 10px;
@@ -42,6 +45,9 @@ button {
     letter-spacing: 1px;
     text-transform: uppercase;
     color: #FF0057;
+}
+.show-btn {
+    margin-top: -25px;
 }
 .mp-img-section {
     padding: 0px;
